Bug #37153 Ndb Cluster reports affected rows incorrectly

Cluster can report affected rows incorrectly when Insert or Delete used 
with AutoCommit.

This patch corrects the affected rows counts.